cl-workshop-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: java-svc
spec:
  type: NodePort
  selector:
    app: spring-boot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
